apply plugin: 'com.android.library'
apply plugin: 'de.mobilej.unmock'
apply plugin: 'maven-publish'

group='com.github.talkable'

android {
    namespace = 'com.talkable.sdk'
    compileSdk = Integer.parseInt(project.sdk_compile_sdk)

    defaultConfig {
        minSdk = Integer.parseInt(project.sdk_min_sdk)
        testInstrumentationRunner = 'androidx.test.runner.AndroidJUnitRunner'

        // Required for sdk version retrieval to work as of Android Studio 4.1.0: https://issuetracker.google.com/issues/158695880
        buildConfigField 'int', 'VERSION_CODE', "${project.sdk_version_code}"
        buildConfigField 'String', 'VERSION_NAME', "\"${project.sdk_version_name}\""
    }
    buildFeatures {
        buildConfig = true
    }
    buildTypes {
        release {
            minifyEnabled = false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_1_8
        targetCompatibility = JavaVersion.VERSION_1_8
    }

    testOptions {
        // targetSdk on library modules only applies to instrumented tests as of AGP 9
        targetSdk = Integer.parseInt(project.sdk_target_sdk)
        unitTests.returnDefaultValues = true
        unitTests.all {
            // PowerMock 1.6.6/Objenesis need reflective access that JDK 17+ encapsulates
            jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
                    '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
                    '--add-opens=java.base/java.util=ALL-UNNAMED',
                    '--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED',
                    // OkHttp 3.2.0 reflects into the JDK's SSL internals on the test JVM
                    '--add-opens=java.base/sun.security.ssl=ALL-UNNAMED'
        }
    }
    lint {
        abortOnError = false
    }
    buildToolsVersion = project.android_build_tools

    publishing {
        singleVariant('release') {
            withSourcesJar()
        }
    }
}

afterEvaluate {
    publishing {
        publications {
            release(MavenPublication) {
                from components.release
                groupId = 'com.github.talkable'
                artifactId = 'android-sdk'
            }
        }
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')

    testImplementation 'junit:junit:4.13.2'

    testImplementation 'org.mockito:mockito-core:2.28.2'
    testImplementation('org.powermock:powermock-api-mockito2:2.0.9') {
        exclude module: 'hamcrest-core'
    }
    testImplementation('org.powermock:powermock-module-junit4:2.0.9') {
        exclude module: 'hamcrest-core'
    }

    androidTestImplementation 'androidx.annotation:annotation:1.8.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test:rules:1.5.0'

    implementation 'androidx.annotation:annotation:1.8.2'
    implementation 'com.squareup.okhttp3:okhttp:3.2.0' // update to a new version when https://github.com/square/okhttp/issues/3928 will be fixed
    implementation 'com.squareup.okhttp3:logging-interceptor:3.2.0'
    implementation 'com.facebook.android:facebook-android-sdk:15.2.0'
    implementation 'com.google.code.gson:gson:2.8.9'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
}
